--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv=”X-UA-Compatible” content=”ie=edge” />
   <title>My Portfolio</title>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </head>
 <main>
   <body>
