--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@
                    alt="Red Tomatoes"/></a>
           Pomodoro Clock using React
           </p>
+          <p class="project-tile">
+            <a href="https://vanbc18.github.io/Google-Clone/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://steigerlegal.ch/2016/02/04/g-google-wort-bild-marke/"
+                   alt="google logo"/></a>
+            Google Clone Website
         </div>
     </section>
         <p class="fcc">You can see my fCC certificates right 
