--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a href="https://vanbc18.github.io/Google-Clone/"
                target="_blank">
               <img class="project-img"
-                   src="https://steigerlegal.ch/2016/02/04/g-google-wort-bild-marke/"
+                   src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png"
                    alt="google logo"/></a>
             Google Clone Website
         </div>
