--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a href="https://vanbc18.github.io/Google-Clone/"
                target="_blank">
               <img class="project-img"
-                   src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png"
+                   src="https://s2.qwant.com/thumbr/0x380/7/e/acb97df3d2580063086ceed22224e0c1bfcec47afb966e16a208152ebef719/wp2860510.png?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2860510.png&q=0&b=1&p=0&a=0"
                    alt="google logo"/></a>
             Google Clone Website
         </div>
