--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
         </div>
     </section>
         <p class="fcc">You can see my fCC certificates right 
-          <a id="profile-link" 
+          <a class="profile-link" 
              href="https://www.freecodecamp.org/van90"
              target="_blank">here</a>,
           and my Sololearn certificates
-          <a id="profile-link" 
+          <a class="profile-link" 
              href="https://www.sololearn.com/profile/21297170"
              target="_blank">here</a>.
         </p>
