--- a/index.html
+++ b/index.html
@@ -134,12 +134,11 @@
         </div>
     </section>
         <p class="fcc">You can see my fCC certificates right 
-          <a class="profile-link" 
+          <a id="profile-link" 
              href="https://www.freecodecamp.org/van90"
              target="_blank">here</a>,
           and my Sololearn certificates
-          <a class="profile-link" 
-             href="https://www.sololearn.com/profile/21297170"
+          <a href="https://www.sololearn.com/profile/21297170"
              target="_blank">here</a>.
         </p>
         <section id="contact">
