--- a/index.html
+++ b/index.html
@@ -131,6 +131,52 @@
                    src="https://s2.qwant.com/thumbr/0x380/7/e/acb97df3d2580063086ceed22224e0c1bfcec47afb966e16a208152ebef719/wp2860510.png?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2860510.png&q=0&b=1&p=0&a=0"
                    alt="google logo"/></a>
             Google Clone Website
+          </p>
+        <p class="project-tile">
+            <a href="https://vanbc18.github.io/D3-Bar-Chart-for-fCC/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://s2.qwant.com/thumbr/474x345/d/6/f8a7903e4e17fca6ae53dce52d59963338eadbaaad03d07e7641c42b58fe7c/th.jpg?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.vHF-Qt2NGzKT93fN1bZtAQHaFZ%26pid%3DApi&q=0&b=1&p=0&a=0"
+                   alt="bar chart display"/></a>
+            <br />
+            D3 Bar Chart
+          </p>
+        <p class="project-tile">
+            <a href="https://vanbc18.github.io/D3-Scatterplot-Graph-for-fCC/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://s2.qwant.com/thumbr/474x315/5/0/b9b45eb0c28ae05ed22ba9be9ec1c257bec669efebc4ac43aa8e86e6166a3d/th.jpg?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.X9Lg50cd6RRgb50JekfrxgHaE7%26pid%3DApi&q=0&b=1&p=0&a=0"
+                   alt="scatterplot map display"/></a>
+          <br />
+            D3 Scatterplot Graph
+          </p>
+         <p class="project-tile">
+            <a href="https://vanbc18.github.io/D3-Heat-Map-for-fCC/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://s2.qwant.com/thumbr/474x474/c/f/8d36d82a1b572757db1dc93f3727629b58c3cf9cab81130e343c26ded76676/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.4J3lrqTm4WbBPlTHGah-WQHaHa%26pid%3DApi&q=0&b=1&p=0&a=0"
+                   alt="Heat map display"/></a>
+          <br />
+            D3 Heat Map
+          </p>
+        <p class="project-tile">
+            <a href="https://vanbc18.github.io/D3-Choropleth-Map-for-fCC/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://s2.qwant.com/thumbr/474x335/c/c/76563f60eda879b4b7274f0f00698c3981da851bee477ea28f102549d9ea05/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.t3qKV239QRsDqRD-3PEuYAHaFP%26pid%3DApi&q=0&b=1&p=0&a=0"
+                   alt="US map display"/></a>
+          <br />
+            D3 Choropleth Map
+          </p>
+          <p class="project-tile">
+            <a href="https://vanbc18.github.io/D3-Tree-Map-for-fCC/"
+               target="_blank">
+              <img class="project-img"
+                   src="https://s1.qwant.com/thumbr/474x761/b/a/32107fc909ba9aad92bd64d6bab83e86afb2699f53714ad36f6175f8e4a060/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.68IBs-GVqvZMa2M5vdUWOwHaL5%26pid%3DApi&q=0&b=1&p=0&a=0"
+                   alt="tree map display"/></a>
+          <br />
+            D3 Tree Map
+          </p>
         </div>
     </section>
         <p class="fcc">You can see my fCC certificates right 
