--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
              alt="linkedIn logo"/>
         </a>
       </div>
-      &copy; 2021 Van B-C. FCC Page</footer>
+      &copy; 2021 Van B-C. FCC Page
+      </footer>
       </body>
     </main>
