--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     </section>
       <h2>Here are my projects so far</h2>
       <section id="projects">
-        <h3>fCC Projects</h3><h4>HTML & CSS</h4>
+        <h3>fCC Projects</h3>
+        <h4>HTML & CSS</h4>
         <div class="projects-grid">
           <p class="project-tile">
             <a href="https://codepen.io/van_cmoi/full/WNRJZqL"
@@ -92,7 +93,7 @@
                    src="https://s2.qwant.com/thumbr/0x380/4/4/c11fae86a35326cc9ccc03d6e6ed1093ba72e93728ea5c793674c0a56893a3/depositphotos_58015629-stock-photo-inspirational-and-motivational-quotes-poster.jpg?u=http%3A%2F%2Fst2.depositphotos.com%2F1813957%2F5801%2Fi%2F450%2Fdepositphotos_58015629-stock-photo-inspirational-and-motivational-quotes-poster.jpg&q=0&b=1&p=0&a=0"
                    alt="Believe you can, and you're halfway there"/></a>
           <br />
-          Build a Random Quote Machine using React
+          Build a Random Quote Machine
           </p>
           <p class="project-tile">
             <a href="https://codepen.io/van_cmoi/full/abwrrpg"
@@ -100,7 +101,7 @@
               <img class="project-img" 
                    src="https://s1.qwant.com/thumbr/0x380/3/6/cfe5056dd8d920933c3028ca47b33f48bddad562feb351ec69312e178f8439/Pale-Green-Single-Colour-Quilling-Strips.png?u=http%3A%2F%2Fwww.jjquilling.co.uk%2Fwp-content%2Fuploads%2F2013%2F10%2FPale-Green-Single-Colour-Quilling-Strips.png&q=0&b=1&p=0&a=0"
                    alt="pale green tile"/></a>
-          Markdown Previewer using React
+          Markdown Previewer
           </p>
           <p class="project-tile">
             <a href="https://codepen.io/van_cmoi/full/bGrdMqa"
@@ -109,7 +110,7 @@
                    src="https://upload.wikimedia.org/wikipedia/commons/9/92/Elegant_Background-14.jpg"
                    alt="blue and green image with a geometric pattern"/></a>
             <br />
-          Drum Machine using React
+          Drum Machine
           </p>
           <p class="project-tile">
             <a href="https://codepen.io/van_cmoi/full/XWaOVQa"
@@ -118,7 +119,7 @@
                    src="https://s1.qwant.com/thumbr/0x380/b/8/a461d4a87fba2bcd963513c15fbc7bef9ccd674ed98c079ddcff52b6402529/cours-particuliers-de-maths-a-besancon-du-cp-a-la-terminale-3658-1504094255.jpg?u=https%3A%2F%2Fwww.kelclass.com%2Fimages%2Fbannieres_annonces%2Fcours-particuliers-de-maths-a-besancon-du-cp-a-la-terminale-3658-1504094255.jpg&q=0&b=1&p=0&a=0"
                    alt="Math expressions on a blackboard"/></a>
             <br />
-          JS Calculator using React
+          JS Calculator
           </p>
           <p class="project-tile">
             <a href="https://codepen.io/van_cmoi/full/GROOXox"
@@ -126,7 +127,7 @@
               <img class="project-img"
                    src="https://s2.qwant.com/thumbr/0x380/6/6/a21724ca9e61acde7396f0317edaac716965b179f9cb5a6136b50db1543365/800px-bright_red_tomato_and_cross_section02.jpg?u=https%3A%2F%2Fwww.lovemysalad.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Fimage_530x397%2Fpublic%2F800px-bright_red_tomato_and_cross_section02.jpg%3Fitok%3D_2-MsqIa&q=0&b=1&p=0&a=0"
                    alt="Red Tomatoes"/></a>
-          Pomodoro Clock using React
+          Pomodoro Clock
           </p>
         </div>
         
@@ -139,7 +140,7 @@
                    src="https://s2.qwant.com/thumbr/474x345/d/6/f8a7903e4e17fca6ae53dce52d59963338eadbaaad03d07e7641c42b58fe7c/th.jpg?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.vHF-Qt2NGzKT93fN1bZtAQHaFZ%26pid%3DApi&q=0&b=1&p=0&a=0"
                    alt="bar chart display"/></a>
             <br />
-            D3 Bar Chart
+            Bar Chart
           </p>
         <p class="project-tile">
             <a href="https://vanbc18.github.io/D3-Scatterplot-Graph-for-fCC/"
@@ -148,7 +149,7 @@
                    src="https://s2.qwant.com/thumbr/474x315/5/0/b9b45eb0c28ae05ed22ba9be9ec1c257bec669efebc4ac43aa8e86e6166a3d/th.jpg?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.X9Lg50cd6RRgb50JekfrxgHaE7%26pid%3DApi&q=0&b=1&p=0&a=0"
                    alt="scatterplot map display"/></a>
           <br />
-            D3 Scatterplot Graph
+            Scatterplot Graph
           </p>
          <p class="project-tile">
             <a href="https://vanbc18.github.io/D3-Heat-Map-for-fCC/"
@@ -157,7 +158,7 @@
                    src="https://s2.qwant.com/thumbr/474x474/c/f/8d36d82a1b572757db1dc93f3727629b58c3cf9cab81130e343c26ded76676/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.4J3lrqTm4WbBPlTHGah-WQHaHa%26pid%3DApi&q=0&b=1&p=0&a=0"
                    alt="Heat map display"/></a>
           <br />
-            D3 Heat Map
+            Heat Map
           </p>
         <p class="project-tile">
             <a href="https://vanbc18.github.io/D3-Choropleth-Map-for-fCC/"
@@ -166,7 +167,7 @@
                    src="https://s2.qwant.com/thumbr/474x335/c/c/76563f60eda879b4b7274f0f00698c3981da851bee477ea28f102549d9ea05/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.t3qKV239QRsDqRD-3PEuYAHaFP%26pid%3DApi&q=0&b=1&p=0&a=0"
                    alt="US map display"/></a>
           <br />
-            D3 Choropleth Map
+            Choropleth Map
           </p>
           <p class="project-tile">
             <a href="https://vanbc18.github.io/D3-Tree-Map-for-fCC/"
@@ -175,7 +176,7 @@
                    src="https://s1.qwant.com/thumbr/474x761/b/a/32107fc909ba9aad92bd64d6bab83e86afb2699f53714ad36f6175f8e4a060/th.jpg?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.68IBs-GVqvZMa2M5vdUWOwHaL5%26pid%3DApi&q=0&b=1&p=0&a=0"
                    alt="tree map display"/></a>
           <br />
-            D3 Tree Map
+            Tree Map
           </p>
         </div>
         
