--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </p>
         </div>
         
-        <h4>Personal Projects</h4>
+        <h3 id="personal">Personal Projects</h3>
         <div class="projects-grid">
         <p class="project-tile">
             <a href="https://vanbc18.github.io/Google-Clone/"
