--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="welcome-section">
       <h1>Hello everyone, I'm Van</h1>
       <p class="junior-dev">
-        a junior web developer
+        I build responsive user interfaces
       </p>
     </section>
       <h2>Here are my projects so far</h2>
